--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,11 @@ padding:10px;
 box-shadow:0 10px 10px 0 rgba(0,0,255,0.4), 0 10px 100px 0 rgba(0, 0, 255, 0.4);
 
 }
+
+p{
+  text-align:justify;
+  font-family:"American Typesetting", monospace;
+}
 div.outer{
 
 }
