--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ height:auto;
 font-weight:lighter;
 border-radius:20px;
 padding:10px;
-box-shadow:0 10px 10px 0 rgba(0,0,255,0.4), 0 10px 100px 0 rgba(0, 0, 255, 0.4);
+box-shadow:10px 10px 5px #d3d3d3;
 
 }
 
