--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ box-shadow:10px 10px 5px #d3d3d3;
 
 p{
   text-align:justify;
-  font-family:"American Typesetting", monospace;
+font-family: fantasy;
 }
 div.outer{
 
